--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   material_dialogs: ^1.1.4
   flutter_slidable: ^3.0.0
   flutter_admin_scaffold: ^1.3.0
+  syncfusion_flutter_datepicker:
+
 
 dev_dependencies:
   flutter_test:
