--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   flutter_slidable: ^3.0.0
   flutter_admin_scaffold: ^1.3.0
   syncfusion_flutter_datepicker:
+  http: ^1.2.2
+
 
 
 dev_dependencies:
